tests/unit/language/errors/copy_opaque_rejected.arche
// Opaque values are non-copyable (move-only): `copy` of one is a compile error. `file` is a
// real opaque handle — no FFI stub needed.
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "move-only" %t.out
#import { io }
main :: proc() {
  io.stdout()(f:);
  io.fclose(copy f);
}
